--- a/src/main/resources/templates/Admin.html
+++ b/src/main/resources/templates/Admin.html
@@ -33,7 +33,7 @@
     <table>
 
         <tr>
-            <th>사진</th>
+            <th>호텔이미지</th>
             <th>호텔이름</th>
             <th>주소</th>
             <th>가격</th>
@@ -47,6 +47,35 @@
             <td th:text="${hlist.htAddress}"></td>
             <td th:text="${pricelist[hlist.htId]}"></td>
             <td><button type="submit" class="hotelupdate">수정</button></td>
+            </form>
+        </tr>
+    </table>
+</th:block>
+
+<th:block th:if="${rlist != null}">
+    <table>
+
+        <tr>
+            <th>호텔이름</th>
+            <th>객실이미지</th>
+            <th>객실이름</th>
+            <th>객실가격</th>
+            <th>이용인원</th>
+            <th>체크인 시간</th>
+            <th>체크아웃 시간</th>
+            <th>수정여부</th>
+        </tr>
+        <tr th:each="rlist : ${rlist}">
+            <form role="form">
+                <input type="text" hidden="hidden" name="rId" th:value="${rlist.rId}">
+                <td th:name="hotelHtId" th:text="${rlist.htName} + '호텔'"></td>
+                <td><img th:src="${rlist.rImg}" class="oriImg"></td>
+                <td th:name="rName" th:text="${rlist.rName}"></td>
+                <td th:name="rPrice" th:text="${rlist.rPrice}"></td>
+                <td th:name="rCnt" th:text="${rlist.rCnt}"></td>
+                <td th:name="rCheckin" th:text="${rlist.rCheckin}"></td>
+                <td th:name="rCheckout" th:text="${rlist.rCheckout}"></td>
+                <td><button type="submit" class="roomupdate">수정</button></td>
             </form>
         </tr>
     </table>
@@ -65,32 +94,5 @@
     });
 
 </script>
-<th:block th:if="${rlist != null}">
-    <table>
-
-        <tr>
-            <th>호텔이름</th>
-            <th>사진</th>
-            <th>객실이름</th>
-            <th>객실가격</th>
-            <th>이용인원</th>
-            <th>체크인 시간</th>
-            <th>체크아웃 시간</th>
-            <th>수정여부</th>
-        </tr>
-        <tr th:each="rlist : ${rlist}">
-            <form role="form">
-                <td th:name="hotelHtId" th:text="${rlist.htName} + '호텔'"></td>
-                <td><img th:src="${rlist.rImg}" class="oriImg"></td>
-                <td th:name="rName" th:text="${rlist.rName}"></td>
-                <td th:name="rPrice" th:text="${rlist.rPrice}"></td>
-                <td th:name="rCnt" th:text="${rlist.rCnt}"></td>
-                <td th:name="rCheckin" th:text="${rlist.rCheckin}"></td>
-                <td th:name="rCheckout" th:text="${rlist.rCheckout}"></td>
-                <td><button type="submit" class="roomupdate">수정</button></td>
-            </form>
-        </tr>
-    </table>
-</th:block>
 </body>
 </html>
