--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,8 +1,18 @@
 /**{box-sizing: border-box}*/
+footer{
+    display: block;
+
+}
+
+.footer_wrapper{
 
 
+    /*position: relative;*/
+
+
+}
 .footer__container{
-    height: 300px;
+    height: 240px;
     width: 100vw;
     background-color: black;
     color: white;
@@ -10,11 +20,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-
-
-
-}
-.introduce{
-    background-color: #4CAF50;
-    display: contents;
+    position : relative;
+    bottom: 0 ;
 }
