--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -3,10 +3,11 @@
 }
 html{
     margin: 10px;
+    height: 100%
 }
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 .navbar{
     width: 100%;
