--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,14 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <footer th:fragment="footerFragment">
         <link rel="stylesheet" href="css/footer.css">
-
+        <div class="footer_wrapper">
         <div class="footer__container">
-
+                    Footer
         </div>
-        <!-- 부트스트랩 번들 JS, TMFFLR -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-        <script> console.log('작동중')</script>
-        <!--  -->
+        </div>
     </footer>
 </html>
