--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -40,6 +40,7 @@
             <link rel="stylesheet" href="/css/mainPage.css">
             <link rel="stylesheet" href="/css/hotelPage.css">
             <link rel="stylesheet" href="/css/reservation.css">
+            <link rel="stylesheet" href="/css/reserved.css">
 
 
 
@@ -53,6 +54,7 @@
             <script src="/js/mainPage.js" defer></script>
             <script src="/js/hotelPage.js" defer></script>
             <script src="/js/reservation.js" defer></script>
+            <script src="/js/reserved.js" defer></script>
 
             <!---->
         </th:block>
