--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -10,10 +10,10 @@
 
     <h1>메인 페이지</h1>
 
-
-
-
-    <h1><a href="/hotel">호텔페이지 링크</a></h1></div>
+    <h2><a href="/hotel">호텔페이지 </a></h2>
+    <h2><a href="/hotel/reg">호텔등록 페이지</a></h2>
+    <h2><a href="/reserved">예약내역 페이지</a></h2>
+    <h2><a href="/hotel/list">호텔 리스트</a></h2>
 </div>
 </body>
 </html>
