--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -23,7 +23,7 @@
             </td>
             <td th:text="${list.htName}"></td>
             <td th:text="${list.htAddress}"></td>
-            <td th:if="${pricelist[1]} != null"><span th:text="${pricelist[list.htId]}"></span></td>
+            <td th:if="${pricelist[1]} != null"><span th:text="${pricelist[list.htId]}+'원'"></span></td>
 
         </tr>
 
