--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -43,10 +43,10 @@
                 <img th:src="${list.rImg}" class="oriImg">
             </td>
             <td th:name="rName" th:text="${list.rName}"></td>
-            <td th:name="rPrice" th:text="${list.rPrice}"></td>
-            <td th:name="rCnt" th:text="${list.rCnt}"></td>
-            <td th:name="rCheckin" th:text="${#dates.format(list.rCheckin, 'yyyy년 MM월 dd일')}"></td>
-            <td th:name="rCheckout" th:text="${#dates.format(list.rCheckout, 'yyyy년 MM월 dd일')}"></td>
+            <td th:name="rPrice" th:text="${list.rPrice}+'원'"></td>
+            <td th:name="rCnt" th:text="${list.rCnt}+'명'"></td>
+            <td th:name="rCheckin" th:text="|${#dates.format(list.rCheckin, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(list.rCheckin)})|"></td>
+            <td th:name="rCheckout" th:text="|${#dates.format(list.rCheckout, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(list.rCheckout)})|"></td>
             <div hidden="hidden">
                 <input type="text" th:name="rId" th:value="${list.rId}"/>
             </div>
