--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,6 +26,8 @@
     <ul>
         <li><a href="/hotel/adminlist">호텔 관리</a></li>
         <li><a href="/room/adminlist">객실 관리</a></li>
+        <li><a href="/hotel/reg">호텔 등록</a></li>
+
     </ul>
 </nav>
 
@@ -46,7 +48,8 @@
             <td th:text="${hlist.htName}"></td>
             <td th:text="${hlist.htAddress}"></td>
             <td th:text="${pricelist[hlist.htId]}"></td>
-            <td><button type="submit" class="hotelupdate">수정</button></td>
+            <td><button type="submit" class="roomcreate">객실등록</button><br>
+            <button type="submit" class="hotelupdate">수정</button></td>
             </form>
         </tr>
     </table>
@@ -61,8 +64,6 @@
             <th>객실이름</th>
             <th>객실가격</th>
             <th>이용인원</th>
-            <th>체크인 시간</th>
-            <th>체크아웃 시간</th>
             <th>수정여부</th>
         </tr>
         <tr th:each="rlist : ${rlist}">
@@ -73,8 +74,6 @@
                 <td th:name="rName" th:text="${rlist.rName}"></td>
                 <td th:name="rPrice" th:text="${rlist.rPrice}"></td>
                 <td th:name="rCnt" th:text="${rlist.rCnt}"></td>
-                <td th:name="rCheckin" th:text="${rlist.rCheckin}"></td>
-                <td th:name="rCheckout" th:text="${rlist.rCheckout}"></td>
                 <td><button type="submit" class="roomupdate">수정</button></td>
             </form>
         </tr>
@@ -90,6 +89,10 @@
     $(".roomupdate").click(function () {
         formObj.attr("action", "/room/updateView");
         formObj.attr("method", "post")
+        formObj.submit();
+    });
+    $(".roomcreate").click(function () {
+        formObj.attr("action", "/room/reg");
         formObj.submit();
     });
 
