0208 [modify] 어드민계정 로그인시 관리자 항목 구현

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -24,8 +24,8 @@
 
 <nav>
     <ul>
-        <li><a href="/hotel/adminlist">호텔 관리</a></li>
-        <li><a href="/room/adminlist">객실 관리</a></li>
+        <li><a href="/admin/hotellist">호텔 관리</a></li>
+        <li><a href="/admin/roomlist">객실 관리</a></li>
         <li><a href="/hotel/reg">호텔 등록</a></li>
 
     </ul>
