--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,6 +51,11 @@
                         </a>
                     </li>
 
+                    <li class="nav-item" th:if="${'admin@jspo.com'.equals(session.email)}">
+                        <a href="/admin" class="nav-link">
+                            관리자
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
