--- a/src/main/resources/templates/reserved.html
+++ b/src/main/resources/templates/reserved.html
@@ -13,40 +13,36 @@
 <body>
 
 
-
         <div class="container  pb-3 mt-5 mb-5 " layout:fragment="content">
             <div class="rounded-3 shadow-lg mt-4 mb-5">
                 <div class="px-3 px-sm-4 px-xl-5 pt-1 pb-4 pb-sm-5">
 
                     <div class="row">
-                        <h1>예약내역페이지</h1>
+                        <h1 class="fw-bold p-2 m-2 ">예약내역페이지</h1>
                         <tr th:each="r : ${reservation}">
 
                             <div class="col-lg-4 col-md-5 pt-3 pt-sm-4 w-100">
 
                                 <div class="rounded-3 bg-light px-3 px-sm-4 py-4 w-100" id="reserved_content">
-                                    <div class="reserved_hotel_img">
-                                            예약된 호텔 이미지
+                                    <div class="reserved_hotel_img position-relative">
+
+                                        <span class="btn btn-icon btn-danger position-absolute top-0 end-0 py-0 px-1 m-2" th:if="${r.getResState() == 1}" onclick="cancelPay()" data-bs-toggle="tooltip" title="Remove from Favorites"><i class="fa-solid fa-trash-can"></i></span>
                                     </div>
                                     <div class="reserved_hotel_info">
-                                        <p> 예약번호 : <span class="resId" th:text="${r.getResId()}"></span> </p>
+                                        <p class="fw-bold">예약번호 : <span class="resId" th:text="${r.getResId()}"></span></p>
+                                        <p>호텔명 : <span th:text="|${hotelDto.getHtName()} - ${roomDto.getrName()}|"></span></p>
 
-                                        <h1>예약내역페이지</h1>
-                                        <div th:each="r : ${reservation}">
-                                            예약번호 : <span class="resId" th:text="${r.getResId()}"></span><br>
-                                            호텔명 : <span th:text="${hotelDto.getHtName()}"></span><br>
-                                            객실명 : <span th:text="${roomDto.getrName()}"></span><br>
-                                            업체연락처 : <span th:text="${hotelDto.getHtPhone()}"></span><br>
-                                            회원명 : <span class="memberName" th:text="${memberDto.getName()}"></span><br>
-                                            예약날짜 : <span th:text="|${#dates.format(r.getResDate(), 'yyyy년 MM월 dd일 HH시 mm분')} (${#dates.dayOfWeekNameShort(r.getResDate())})|"></span><br>
-                                            숙박날짜 : <span th:text="|${#dates.format(r.roomRCheckin, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(r.roomRCheckin)}) ~ ${#dates.format(r.roomRCheckout, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(r.roomRCheckout)}) ${#dates.day(r.roomRCheckout) - #dates.day(r.roomRCheckin)}박|"></span><br>
-                                            예약상태 : <span th:if="${r.getResState()} == 1" th:text="예약완료"></span>
-                                            <span th:unless="${r.getResState()} == 1" th:text="예약마감"></span><br>
-                                            결제금액 : <span class="resPrice" th:text="${r.getResPrice()}"></span><br>
-                                            <button th:if="${r.getResState() == 1}" th:text="예약취소" onclick="cancelPay()"></button>
-                                            <br>
-                                        </div>
+                                       <p> 예약자 : <span class="memberName" th:text="${memberDto.getName()}"></span></p>
+                                       <p> 예약날짜 : <span th:text="|${#dates.format(r.getResDate(), 'yyyy년 MM월 dd일 HH시 mm분')} (${#dates.dayOfWeekNameShort(r.getResDate())})|"></span></p>
+<!--                                        <p>숙박날짜 : <span th:text="|${#dates.format(r.roomRCheckin, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(r.roomRCheckin)}) ~ ${#dates.format(r.roomRCheckout, 'yyyy년 MM월 dd일')} (${#dates.dayOfWeekNameShort(r.roomRCheckout)}) ${#dates.day(r.roomRCheckout) - #dates.day(r.roomRCheckin)}박|"></span></p>-->
+                                       <p> 예약상태 : <span th:if="${r.getResState()} == 1" th:text="예약완료"></span></p>
+                                       <p> <span th:unless="${r.getResState()} == 1" th:text="예약마감"></span></p>
+                                        <p> 업체연락처 : <span th:text="${hotelDto.getHtPhone()}"></span></p>
+                                       <p> 결제금액 : <span class="resPrice" th:text="${r.getResPrice()}"></span></p>
+
+
                                     </div>
+
                                 </div>
                             </div>
                         </tr>
