--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html">
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!doctype html>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default_layout}">
+
+
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <title>호텔 리스트</title>
     <style>
         .oriImg {
@@ -17,7 +21,7 @@
 </head>
 <body>
 
-
+<div class="container h-100 " layout:fragment="content">
 <header>
     <h1> ADMIN 게시판</h1>
 </header>
@@ -79,6 +83,7 @@
         </tr>
     </table>
 </th:block>
+</div>
 <script>
     var formObj = $("form[role='form']");
     $(".hotelupdate").click(function () {
