--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default_layout}">
+
+
 <head>
     <meta charset="UTF-8">
     <title>호텔 리스트</title>
@@ -12,6 +17,7 @@
 <header>
     <h1> 호텔 게시판</h1>
 </header>
+<div class="container h-100 " layout:fragment="content">
 <form role="form" >
     <table>
         <tr><th>사진</th><th>호텔이름</th><th>주소</th> <th>가격</th></tr>
@@ -30,6 +36,6 @@
     </table>
 </form>
 
-
+</div>
 </body>
 </html>
