--- a/src/main/resources/templates/hotelReg.html
+++ b/src/main/resources/templates/hotelReg.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default_layout}">
+
+
 <head>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta charset="UTF-8">
@@ -9,10 +14,10 @@
     </style>
 </head>
 <body>
+<div class="container h-80 " layout:fragment="content">
 <th:block th:if="${hotelDto == null}">
-<header>
-    <h1> 호텔 등록</h1>
-</header>
+
+
 <form role="form" method="post" action="/hotel/reg" enctype="multipart/form-data">
     <table>
         <tbody>
@@ -120,8 +125,10 @@
         </tbody>
     </table>
 </form>
+
 </th:block>
 
+</div>
 
 </body>
 </html>
