0209 패치를 위한 커밋

--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div class="container my-5 h-100" layout:fragment="content" >
+<div class="container my-5 w-100 h-100" layout:fragment="content" >
 
   <div class="title my-3 w-100 justify-content-between">
 
