--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
         
         <div class="logo">
 
-        <img class="text-center" src="/imgs/JSPO-logo.png" alt="" height="100px">
+        <img class="text-center" src="/imgs/logos/jspo-logo-final.png" alt="" height="100px">
 
         </div>
 
