--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -19,7 +19,7 @@
 
         <div class="logo">
 
-            <img class="text-center" src="/imgs/JSPO-logo.png" alt="" height="100px">
+            <img class="text-center" src="/imgs/logos/jspo-logo-final.png" alt="" height="100px">
 
         </div>
         <form th:action="@{/join}" method="post" name="regForm" class="needs-validation" th:object="${memberDto}"><!--modelAttribute="memberDto"-->
