--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
     <!--    justify-content-between-->
     <nav class="navbar navbar-expand-lg bg-light shadow-lg sticky-top ">
         <div class="header_container"><a href="/" class="navbar-brand align-middle">
-            <img src="/imgs/JSPO-logo.png" alt="logo" height="110px">
+            <img id="header_logo" src="/imgs/logos/jspo-logo-final.png" alt="logo" height="110px">
         </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
