--- a/src/main/resources/templates/regForm.html
+++ b/src/main/resources/templates/regForm.html
@@ -82,7 +82,7 @@
 
             <div class="form-group">
                 <label class="form-label " for="birth">생년월일</label>
-                <input class="form-control" type="date" id="birth" name="birth" th:value="*{birth}" required>
+                <input class="form-control" type="date" id="birth" name="birth" th:value="*{birth}" required pattern="\#{4}/\#{2}/\#{2}">
 
             </div>
 
