--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -51,7 +51,8 @@
                 <input type="text" th:name="rId" th:value="${list.rId}"/>
             </div>
             <td>
-                <button type="submit">객실 예약하기</button>
+                <button th:if="${list.rState == 1}" type="submit">객실 예약하기</button>
+                <span th:unless="${list.rState == 1}" th:text="'SOLD OUT'"></span>
             </td>
             </form>
 
