--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -22,9 +22,10 @@
   </div>
 
     <div class=" mb-3 my-3">
-        <form class="d-flex" >
+        <form class="d-flex" action="/hotel"  method="post" >
 
-            <input class="form-control sm-5 me-2" type="search" placeholder="숙소명 검색" aria-label="Search" >
+            <input class="form-control sm-5 me-2" type="search" placeholder="숙소명 검색" aria-label="Search" name="htName">
+
             <button class="btn btn-outline-success" type="submit">검색</button>
         </form>
     </div>
