0210 패치를 위한 커밋

--- a/src/main/resources/templates/hotelReg.html
+++ b/src/main/resources/templates/hotelReg.html
@@ -24,7 +24,7 @@
         <tr>
             <td>
 
-                <label>호fff텔명</label><input type="text" name="htName"  /><br>
+                <label>호텔명</label><input type="text" name="htName"  /><br>
                 <label>호텔주소</label><input type="text" name="htAddress" /><br>
                 <label>호텔이미지</label><input type="file" id="htImg" name="file"/><br>
                 <div class="select_img"><img src="" /></div>
