0208 [modify] hotel_reg

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -39,6 +39,7 @@
             <link rel="stylesheet" href="/css/myPage.css">
             <link rel="stylesheet" href="/css/mainPage.css">
             <link rel="stylesheet" href="/css/hotelPage.css">
+            <link rel="stylesheet" href="/css/hotelReg.css">
             <link rel="stylesheet" href="/css/reservation.css">
             <link rel="stylesheet" href="/css/reserved.css">
 
@@ -53,6 +54,7 @@
             <script src="/js/myPage.js" defer></script>
             <script src="/js/mainPage.js" defer></script>
             <script src="/js/hotelPage.js" defer></script>
+            <script src="/js/hotelReg.js" defer></script>
             <script src="/js/reservation.js" defer></script>
             <script src="/js/reserved.js" defer></script>
 
