0210 [modify] 로그인시 해당페이지로 redirect 구현

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
         </div>
 
         <form action="/login" method="post" name="loginForm" class="needs-validation">
-
+        <input type="hidden" name="referer" th:value="${referer}">
         <div class="form-group was-validated">
             <label class="form-label " for="email">이메일</label>
             <input class="form-control" type="email" id="email" name="email" required maxlength="30" minlength="6" autofocus th:value="${email}">
