--- a/src/main/resources/templates/hotelPage.html
+++ b/src/main/resources/templates/hotelPage.html
@@ -63,7 +63,7 @@
     <div class="card mb-3 hotel_list mt-4" >
         <div class="row g-0">
             <div class="col-md-4">
-                <img th:src="${list.htImg}" class="img-fluid rounded-start" alt="..." width="100%" height="100%">
+                <a th:href="@{/room/list/} + ${list.htId}"> <img th:src="${list.htImg}" class="img-fluid rounded-start" alt="..." width="100%" height="100%"></a>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
