--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -47,7 +47,7 @@
                     }).done(function (data) {
                         // 가맹점 서버 결제 API 성공시 로직
                         alert("결제에 성공했습니다!");
-                        window.location.replace("/reserved");
+                        window.location.replace("/my/reserved");
                     })
                 } else {
                     alert("결제에 실패하였습니다. 에러 내용: " + rsp.error_msg);
