--- a/src/main/resources/templates/hotelList.html
+++ b/src/main/resources/templates/hotelList.html
@@ -5,37 +5,76 @@
       layout:decorate="~{layout/default_layout}">
 
 
-<head>
-    <meta charset="UTF-8">
-    <title>호텔 리스트</title>
-    <style>
-        .oriImg { width: 500px; height: auto;}
-        td{ text-align: center;}
-    </style>
-</head>
 <body>
-<header>
-    <h1> 호텔 게시판</h1>
-</header>
-<div class="container h-100 " layout:fragment="content">
-<form role="form" >
-    <table>
-        <tr><th>사진</th><th>호텔이름</th><th>주소</th> <th>가격</th></tr>
+<div class="container w-100  pb-3 mt-5 mb-5 " layout:fragment="content">
 
-        <tr th:each="list, i : ${list}">
-            <td>
-            <a th:href="@{/room/list/} + ${list.htId}"><img th:src="${list.htImg}" class="oriImg" th:id="${list.htId}" ></a>
-            </td>
-            <td th:text="${list.htName}"></td>
-            <td th:text="${list.htAddress}"></td>
 
-            <td th:if="${pricelist[i.index]} != null"><span th:text="${pricelist[i.index]}+'원'"></span></td>
-            <td th:if="${pricelist[i.index]} == null"><span th:text='0원'></span></td>
+<!--        text-center-->
+        <div class="row">
+            <div class="col border rounded-3  bg-opacity-5 p-0 m-2"  th:each="list, i : ${list}">
+                <div class="hotel_list_img position-relative">
+                <a th:href="|@{/room/list/} + ${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3 w-100"
+                    id="list_img" th:id="${list.htId}" width="200px" height="200px" style="background-size: cover"></a>
+                </div>
+                <div class="hotel_list_info mt-2 p-1">
+                <p class="m-0 "><span class="resId fs-6 text-secondary" th:text="${list.htAddress}"></span></p>
+                <p class="m-0"><span class="resId fs-5" th:text="${list.htName}"></span></p>
+                <p class="text-end"><span th:if="${pricelist[i.index]} != null"><span class="fw-bold" th:text="${pricelist[i.index]}+'원'"></span></span></p>
+                <p class="text-end"><span th:if="${pricelist[i.index]} == null"><span class="fw-bold" th:text='0원'></span></span></p>
+                </div>
+            </div>
 
-        </tr>
+        </div>
+<!--    <div class="rounded-3 shadow-lg mt-4 mb-5">-->
+<!--        <div class="px-3 px-sm-4 px-xl-5 pt-1 pb-4 pb-sm-5">-->
 
-    </table>
-</form>
+<!--            <div class="row">-->
+<!--                <h1 class="fw-bold p-2 m-2 ">호텔 리스트</h1>-->
+<!--                <table>-->
+<!--                <tr th:each="list, i : ${list}">-->
+
+<!--                    <div class="col-lg-4 col-md-5 pt-3 pt-sm-4 w-100">-->
+
+<!--                        <div class="rounded-3 bg-light px-3 px-sm-4 py-4" id="hotel_list_content">-->
+<!--                            <div class="hotel_list_img position-relative">-->
+<!--                                <a th:href="|@{/room/list/} + ${list.htId}|"><img th:src="${list.htImg}" class="oriImg rounded-3 " id="list_img" th:id="${list.htId}" width="200px" height="200px" ></a>-->
+<!--                            </div>-->
+<!--                            <div class="hotel_list_hotel_info">-->
+<!--                                <p class="fw-bold"><span class="resId" th:text="${list.htName}"></span></p>-->
+<!--                                <p class="fw-bold"><span class="resId" th:text="${list.htAddress}"></span></p>-->
+<!--                                <p class="fw-bold"><span class="resId" th:text="${list.htName}"></span></p>-->
+<!--                                <p><span th:if="${pricelist[i.index]} != null"><span th:text="${pricelist[i.index]}+'원'"></span></span></p>-->
+<!--                                <p><span th:if="${pricelist[i.index]} == null"><span th:text='0원'></span></span></p>-->
+<!--                            </div>-->
+
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </tr>-->
+<!--                </table>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<div class="container h-100 " layout:fragment="content">-->
+<!--<form role="form" >-->
+<!--    <table>-->
+<!--        <tr><th>사진</th><th>호텔이름</th><th>주소</th> <th>가격</th></tr>-->
+
+<!--        <tr th:each="">-->
+<!--            <td>-->
+<!--            <a th:href="@{/room/list/} + ${list.htId}"><img th:src="${list.htImg}" class="oriImg" th:id="${list.htId}" ></a>-->
+<!--            </td>-->
+<!--            <td th:text="${list.htName}"></td>-->
+<!--            <td th:text="${list.htAddress}"></td>-->
+
+<!--            <td th:if="${pricelist[i.index]} != null"><span th:text="${pricelist[i.index]}+'원'"></span></td>-->
+<!--            <td th:if="${pricelist[i.index]} == null"><span th:text='0원'></span></td>-->
+
+<!--        </tr>-->
+
+<!--    </table>-->
+<!--</form>-->
 
 </div>
 </body>
