--- a/src/main/resources/templates/hotelReg.html
+++ b/src/main/resources/templates/hotelReg.html
@@ -13,28 +13,23 @@
     </style>
 </head>
 <body>
-
+<div class="container h-80 " layout:fragment="content">
 <th:block th:if="${hotelDto == null}">
-    <div class="container h-80 " layout:fragment="content">
+
+    <span class="fw-bold display-6 ">호텔 등록</span>
     <div class="hotel_reg_wrap justify-content-center"  >
         <div class="hotel_reg" >
 
 
             <form role="form" method="post" action="/hotel/reg" enctype="multipart/form-data" name="hotel_reg_form">
 
-                <div class="select_img"><img src="" /></div>
-
+                <div class="select_img w-100 "><img src="" class="w-100 mb-2 p-1 rounded"  /></div>
+                <div class="hotel_reg_input_group">
                 <div class="input-group input-group-sm mb-3">
                     <span class="input-group-text">호텔명</span>
                     <input type="text" class="form-control" id="htName" name="htName"  aria-describedby="inputGroup-sizing-default">
                 </div>
 
-
-                <!--                <label>호텔명</label><input type="text" name="htName"  /><br>-->
-                <!--                <label>호텔주소</label><input type="text" name="htAddress" /><br>-->
-                <!--                <label>호텔이미지</label><input type="file" id="htImg" name="file"/><br>-->
-
-<!--                                <label>호텔 전화번호</label><input type="text" name="htPhone"  /><br>-->
 
                 <div class="input-group input-group-sm mb-3">
                     <span class="input-group-text" >호텔 주소</span>
@@ -43,10 +38,13 @@
 
                 <div class="input-group input-group-sm mb-3">
                     <span class="input-group-text" >호텔 연락처</span>
-                    <input type="text" class="form-control" id="htPhone" name="htPhone"  aria-describedby="inputGroup-sizing-default">
+                    <input type="tel" class="form-control" id="htPhone" name="htPhone"  aria-describedby="inputGroup-sizing-default">
                 </div>
-
-                <div><button type="button" class="btn btn-primary">Primary</button></div>
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" >호텔 이미지</span>
+                    <input type="file" class="form-control" id="htImg" name="file"  aria-describedby="inputGroup-sizing-default">
+                </div>
+                </div>
 
                 <script>
                     $("#htImg").change(function(){
@@ -61,6 +59,10 @@
 
                 </script>
 
+                <div><button type="submit" class="btn btn-success w-100">등록하기</button></div>
+
+
+
             </form>
         </div>
 
@@ -69,104 +71,91 @@
 
 
     </div>
-<!--<form role="form" method="post" action="/hotel/reg" enctype="multipart/form-data">-->
-<!--    <table>-->
-<!--        <tbody>-->
-<!--        <tr>-->
-<!--            <td>-->
 
-<!--                <label>호텔명</label><input type="text" name="htName"  /><br>-->
-<!--                <label>호텔주소</label><input type="text" name="htAddress" /><br>-->
-<!--                <label>호텔이미지</label><input type="file" id="htImg" name="file"/><br>-->
-<!--                <div class="select_img"><img src="" /></div>-->
-<!--                <label>호텔 전화번호</label><input type="text" name="htPhone"  /><br>-->
-
-
-<!--            </td>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <button type="submit">작성</button>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        </tbody>-->
-<!--    </table>-->
-<!--</form>-->
-    </div>
 </th:block>
 
 <th:block th:if="${hotelDto != null}">
-    <header>
-        <h1> 호텔 </h1>
-    </header>
-    <form role="form" enctype="multipart/form-data">
-        <table>
-            <tbody>
-            <tr>
-                <td>
 
-                    <label>호텔명</label><input type="text" th:value="${hotelDto.htName}" readonly /><br>
-                    <label>호텔주소</label><input type="text" th:value="${hotelDto.htAddress}" readonly /><br>
-                    <label>호텔이미지</label><input type="hidden" id="htImg" name="file"/><br>
-                    <div class="select_img"><img th:src="${hotelDto.htImg}" class="img" /></div>
-                    <label>호텔 전화번호</label><input type="text" th:value="${hotelDto.htPhone}" readonly /><br>
+    <span class="fw-bold display-6 ">호텔 정보</span>
+    <div class="hotel_reg_wrap justify-content-center"  >
+        <div class="hotel_reg" >
 
-                    <script>
-                        $("#htImg").change(function(){
-                            if(this.files && this.files[0]) {
-                                var reader = new FileReader;
-                                reader.onload = function(data) {
-                                    $(".select_img img").attr("src", data.target.result).width(500);
+
+
+                <form role="form" method="post" action="/room/reg" enctype="multipart/form-data">
+
+                <div class="select_img w-100 "><img th:src="${hotelDto.htImg}" class="w-100 mb-2 p-1 rounded img"  /></div>
+                <div class="hotel_reg_input_group">
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text">호텔명</span>
+                        <input type="text" class="form-control"  name="htName"  aria-describedby="inputGroup-sizing-default" th:value="${hotelDto.htName}" readonly>
+                    </div>
+
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" >호텔 주소</span>
+                        <input type="text" class="form-control"  name="htAddress"  aria-describedby="inputGroup-sizing-default" th:value="${hotelDto.htAddress}" readonly>
+                    </div>
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" >호텔 연락처</span>
+                        <input type="tel" class="form-control"  name="htPhone"  aria-describedby="inputGroup-sizing-default" th:value="${hotelDto.htPhone}" readonly>
+                    </div>
+
+                </div>
+
+
+
+<!--                    <label>호텔명</label>-->
+<!--                    <select name="hotelHtId">-->
+<!--                        <option th:text="${hotelDto.htName}" th:value="${hotelDto.htId}"></option>-->
+<!--                    </select><br>-->
+
+                    <span class="fw-bold">객실 등록</span>
+
+                    <div class="select_img2"><img src="" class="w-100 mb-2 p-1 rounded img"/></div>
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text">객실명</span>
+                        <input type="text" class="form-control" name="rName"  aria-describedby="inputGroup-sizing-default">
+                    </div>
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text">객실가격</span>
+                        <input type="number" step="1000" class="form-control" name="rPrice"  aria-describedby="inputGroup-sizing-default">
+                    </div>
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" >객실 이미지</span>
+                        <input type="file" class="form-control" id="rImg" name="file"  aria-describedby="inputGroup-sizing-default">
+                        <script>
+                            $("#rImg").change(function(){
+                                if(this.files && this.files[0]) {
+                                    let reader = new FileReader;
+                                    reader.onload = function(data) {
+                                        $(".select_img2 img").attr("src", data.target.result).width(500);
+                                    }
+                                    reader.readAsDataURL(this.files[0]);
                                 }
-                                reader.readAsDataURL(this.files[0]);
-                            }
-                        });
-                    </script>
-                </td>
-            </tbody>
-        </table>
-    </form>
+                            });
+                        </script>
+                    </div>
 
 
 
+                <div><button type="submit" class="btn btn-success w-100">등록하기</button></div>
 
-<form role="form" method="post" action="/room/reg" enctype="multipart/form-data">
-    <table>
-        <tbody>
-        <tr>
-            <td>
-                <label>호텔명</label>
-                <select name="hotelHtId">
-                    <option th:text="${hotelDto.htName}" th:value="${hotelDto.htId}"></option>
-                </select><br>
-                <label>객실명</label><input type="text" name="rName"  /><br>
-                <label>객실가격</label><input type="text" name="rPrice" /><br>
-                <label>객실이미지</label><input type="file" id="rImg" name="file" /><br>
-                <div class="select_img2"><img src="" /></div>
+                </form>
+        </div>
 
-                <script>
-                    $("#rImg").change(function(){
-                        if(this.files && this.files[0]) {
-                            var reader = new FileReader;
-                            reader.onload = function(data) {
-                                $(".select_img2 img").attr("src", data.target.result).width(500);
-                            }
-                            reader.readAsDataURL(this.files[0]);
-                        }
-                    });
-                </script>
-            </td>
-                <tr>
-                    <td>
-                        <button type="submit">작성2</button>
-                    </td>
-                </tr>
-        </tbody>
-    </table>
-</form>
+
+    </div>
+
+
+
 
 </th:block>
 
-</div>
 
+</div>
 </body>
 </html>
