0212 [modify] 예약내역페이지 연결링크 수정 reservation.js 수정

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -12,7 +12,7 @@
 
     <h2><a href="/hotel">호텔페이지 </a></h2>
     <h2><a href="/hotel/reg">호텔등록 페이지</a></h2>
-    <h2><a href="/reserved">예약내역 페이지</a></h2>
+    <h2><a href="/my/reserved">예약내역 페이지</a></h2>
     <h2><a href="/hotel/list">호텔 리스트</a></h2>
 </div>
 </body>
