0213 [add&modify] ExceptionHandler 작업중

--- a/src/main/resources/templates/hotelReg.html
+++ b/src/main/resources/templates/hotelReg.html
@@ -112,7 +112,7 @@
 <!--                    </select><br>-->
 
                     <span class="fw-bold">객실 등록</span>
-
+                    <input type="hidden" name="hotelHtId" th:value="${hotelDto.htId}">
                     <div class="select_img2"><img src="" class="w-100 mb-2 p-1 rounded img"/></div>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text">객실명</span>
